[project]
name = "toxicity-predicator"
version = "0.1.0"
description = "Machine learning model to predict molecular toxicity"
authors = [
    {name = "Pauline Turk"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
