[project]
name = "toxicity-predicator"
version = "0.1.0"
description = "Machine learning model to predict molecular toxicity"
authors = [
    {name = "Pauline Turk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "rdkit (>=2025.9.6,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
